--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "SoundSculpt",
-    "short_name": "SoundSculpt",
-    "description": "SoundSculpt is an awesome website to play songs!",
+    "name": "Soundizer",
+    "short_name": "Soundizer",
+    "description": "Soundizer is an awesome website to play songs!",
     "start_url": ".",
     "theme_color": "#0e1313",
     "background_color": "#ffffff",
